# arataso

./: .editorconfig  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
src/: main.py
src/config/: logger.py  settings.py
src/tenhou/: action_handler.py  action_message.py  constants.py  exceptions.py  mjlog_parser.py  tenhou_client.py
tests/: conftest.py  test_main.py
